font end is dark mode now. fixed a bunch of bugs...

--- a/static/css/tv2_observables.css
+++ b/static/css/tv2_observables.css
@@ -79,8 +79,15 @@
 #form_update_obs {
     width: 100%
 }
+#menu_confirm_delete_container {
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+}
 .padding5 {
-    padding: 5px;
+    padding: 5px;+
 }
 .obs_container {
     border: 2px solid;
